src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/prederr4.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/prederr4.iml:3:19: error: ')' expected
    assert (a < b < c);
                  ^

